welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:6: error: ';' expected but '(' found.
  baisseBrosse(): leveBrosse()
                            ^